# book

./: .gitignore  .markdownlint.json  404.html  README.md  book.toml  index.html  mkdocs.yml  netlify.toml  print.html  pyproject.toml  requirements.txt  searchindex.js  searchindex.json
.github/: dependabot.yml
.github/workflows/: ci.yml
aya/: aya-gen.html  aya-log.html  context.html  index.html
docs/: index.md
docs/book/: index.md
docs/book/aya/: aya-gen.md  aya-log.md  aya-tool.md  context.md  crosscompile.md  index.md  lifecycle.md
docs/book/programs/: cgroup-skb.md  cgroups.md  classifiers.md  lsm.md  probes.md  sockets.md  tracepoints.md  xdp.md
docs/book/start/: development.md  dropping-packets.md  getting-data-to-user-space.md  hello-xdp.md  index.md  logging-packets.md  parsing-packets.md
ebpf/: index.html
examples/: rustfmt.toml  test.sh
examples/aya-gen/: Cargo.toml
examples/aya-gen/myapp/: Cargo.toml
examples/aya-gen/myapp-common/: Cargo.toml
examples/aya-gen/myapp-ebpf/: Cargo.toml
examples/aya-gen/myapp-ebpf/src/: main.rs  vmlinux.rs
examples/aya-gen/myapp/src/: main.rs
examples/aya-tool/: Cargo.toml  README.md
examples/aya-tool/.vim/: coc-settings.json
examples/aya-tool/myapp/: Cargo.toml  build.rs
examples/aya-tool/myapp-ebpf/: Cargo.toml  rust-toolchain.toml
examples/aya-tool/myapp-ebpf/src/: main.rs  vmlinux.rs
examples/aya-tool/myapp/src/: main.rs
examples/aya-tracepoint-echo-open/: .gitignore  Cargo.toml  README.md
examples/aya-tracepoint-echo-open/aya-tracepoint-echo-open/: Cargo.toml
examples/aya-tracepoint-echo-open/aya-tracepoint-echo-open/src/: main.rs
examples/cgroup-skb-egress/: Cargo.toml  README.md
examples/cgroup-skb-egress/.vim/: coc-settings.json
examples/cgroup-skb-egress/cgroup-skb-egress/: Cargo.toml  build.rs
examples/cgroup-skb-egress/cgroup-skb-egress-common/: Cargo.toml
examples/cgroup-skb-egress/cgroup-skb-egress-common/src/: lib.rs
examples/cgroup-skb-egress/cgroup-skb-egress-ebpf/: Cargo.toml
examples/cgroup-skb-egress/cgroup-skb-egress-ebpf/src/: bindings.rs  main.rs
examples/cgroup-skb-egress/cgroup-skb-egress/src/: main.rs
examples/cgroup-skb-egress/xtask/: Cargo.toml
examples/cgroup-skb-egress/xtask/src/: build_ebpf.rs  codegen.rs  main.rs  run.rs
examples/fentry-fork/: .gitignore  Cargo.toml  README.md
examples/fentry-fork/fentry-fork-ebpf/: Cargo.toml
examples/fentry-fork/fentry-fork-ebpf/src/: main.rs  vmlinux.rs
examples/hello-sockops/: Cargo.toml  README.md
examples/hello-sockops/hello-sockops/: Cargo.toml  build.rs
examples/hello-sockops/hello-sockops-ebpf/: Cargo.toml
examples/hello-sockops/hello-sockops-ebpf/src/: main.rs
examples/hello-sockops/hello-sockops/src/: main.rs
examples/kprobetcp/: .gitignore  Cargo.toml  README.md
examples/kprobetcp/kprobetcp-ebpf/: Cargo.toml
examples/kprobetcp/kprobetcp-ebpf/src/: binding.rs  bindings.rs  main.rs  vmlinux.rs
examples/lsm-nice/: Cargo.toml  README.md
examples/lsm-nice/lsm-nice/: Cargo.toml  build.rs
examples/lsm-nice/lsm-nice-ebpf/: Cargo.toml
examples/lsm-nice/lsm-nice-ebpf/src/: main.rs  vmlinux.rs
examples/lsm-nice/lsm-nice/src/: main.rs
examples/myapp-01/: README.md
examples/myapp-01/myapp/: Cargo.toml
examples/myapp-01/myapp-ebpf/: Cargo.toml
examples/myapp-01/myapp-ebpf/src/: main.rs
examples/myapp-01/myapp/src/: main.rs
examples/myapp-02/myapp/: Cargo.toml
examples/myapp-02/myapp-ebpf/: Cargo.toml
examples/myapp-02/myapp-ebpf/src/: bindings.rs  main.rs
examples/myapp-02/myapp/src/: main.rs
examples/myapp-03/: Cargo.toml  README.md
examples/tc-byte-count/: Cargo.toml  README.md
examples/tc-byte-count/tc-byte-count/: Cargo.toml
examples/tc-byte-count/tc-byte-count/src/: lib.rs  main.rs
examples/tc-egress/: Cargo.toml  README.md
examples/tc-egress/tc-egress/: Cargo.toml  build.rs
examples/tc-egress/tc-egress-ebpf/: Cargo.toml
examples/tc-egress/tc-egress-ebpf/src/: bindings.rs  main.rs
examples/tc-egress/tc-egress/src/: main.rs
examples/tracepoint/: Cargo.toml  README.md
examples/tracepoint-openat/: Cargo.toml  README.md
examples/tracepoint-openat/tracepoint-openat/: Cargo.toml
examples/tracepoint-openat/tracepoint-openat/src/: main.rs
examples/tracepoint/tracepoint-ebpf/: Cargo.toml
examples/tracepoint/tracepoint-ebpf/src/: main.rs
examples/xdp-drop/: Cargo.toml  README.md
examples/xdp-drop/xdp-drop/: Cargo.toml  build.rs
examples/xdp-drop/xdp-drop-ebpf/: Cargo.toml
examples/xdp-drop/xdp-drop-ebpf/src/: main.rs
examples/xdp-drop/xdp-drop/src/: main.rs
examples/xdp-hello/: Cargo.toml  README.md
examples/xdp-hello/xdp-hello/: Cargo.toml  build.rs
examples/xdp-hello/xdp-hello-ebpf/: Cargo.toml
examples/xdp-hello/xdp-hello-ebpf/src/: main.rs
examples/xdp-hello/xdp-hello/src/: main.rs
examples/xdp-log/: Cargo.toml  README.md
examples/xdp-log/xdp-log/: Cargo.toml  build.rs
examples/xdp-log/xdp-log-ebpf/: Cargo.toml
examples/xdp-log/xdp-log-ebpf/src/: bindings.rs  main.rs
examples/xdp-log/xdp-log/src/: main.rs
examples/xdp-perfbuf-custom-data/: Cargo.toml  README.md
examples/xdp-perfbuf-custom-data/xdp-perfbuf-custom-data/: Cargo.toml
examples/xdp-perfbuf-custom-data/xdp-perfbuf-custom-data/src/: main.rs
examples/xdp-redirect/: Cargo.toml  README.md
intro/: index.html
overrides/partials/: copyright.html
programs/: cgroups.html  classifiers.html  index.html  lsm.html  probes.html  sockets.html  tracepoints.html  xdp.html
scripts/: netlify-build.sh
src/: SUMMARY.md  index.md
src/aya/: aya-gen.md  aya-log.md  context.md  index.md  lifecycle.md
src/book/: index.md
src/community/: code_of_conduct.md  index.md
src/development/: docker.md  index.md
src/ebpf/: index.md
src/intro/: index.md
src/programs/: cgroups.md  classifiers.md  index.md  lsm.md  probes.md  sockets.md  tracepoints.md  xdp.md
src/start/: development.md  dropping-packets.md  hello-xdp.md  index.md  logging-packets.md
start/: development.html  dropping-packets.html  hello-xdp.html  index.html  logging-packets.html
(+116 files in other folders)
