[workspace]
members = [
  "cgroup-skb-egress",
  "cgroup-skb-egress-common",
  "cgroup-skb-egress-ebpf",
]

resolver = "2"

default-members = ["cgroup-skb-egress", "cgroup-skb-egress-common"]

[workspace.package]
edition = "2024"

[profile.release.package.cgroup-skb-egress-ebpf]
debug = 2
codegen-units = 1
