[package]
name = "myapp-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-bpf = { git = "http://github.com/aya-rs/aya", branch = "main" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya-log", branch = "main" }
myapp-common = { path = "../myapp-common" }

[[bin]]
name = "myapp"
path = "src/main.rs"

[profile.dev]
panic = "abort"
debug = 1
opt-level = 2
overflow-checks = false

[profile.release]
panic = "abort"

[workspace]
members = []
