[package]
name = "myapp"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", branch="main" }
aya-log = { git = "https://github.com/aya-rs/aya-log", branch = "main" }
myapp-common = { path = "../myapp-common", features=["userspace"] }
anyhow = "1.0.42"
ctrlc = "3.2"
simplelog = "0.11"
structopt = { version = "0.3"}
tokio = { version = "1.14", features = ["full"] }

[[bin]]
name = "myapp"
path = "src/main.rs"
