[package]
name = "myapp-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = { git = "https://github.com/aya-rs/aya" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya" }
myapp-common = { path = "../myapp-common" }

[build-dependencies]
which = { version = "7.0.0", default-features = false }

[[bin]]
name = "myapp"
path = "src/main.rs"
