[package]
name = "myapp"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = "0.11"
aya-log = "0.1"
myapp-common = { path = "../myapp-common", features = ["user"] }
anyhow = "1"
ctrlc = "3.2"
tokio = { version = "1.25", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
env_logger = "0.10"
log = "0.4"

[[bin]]
name = "myapp"
path = "src/main.rs"
