[package]
name = "aya-tracepoint-echo-open"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = "0.12"
aya-log = "0.2"
aya-tracepoint-echo-open-common = { path = "../aya-tracepoint-echo-open-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }

[[bin]]
name = "aya-tracepoint-echo-open"
path = "src/main.rs"
