[package]
name = "kprobetcp-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = { git = "https://github.com/aya-rs/aya" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya" }
kprobetcp-common = { path = "../kprobetcp-common" }

[build-dependencies]
which = { version = "7.0.0", default-features = false }

[[bin]]
name = "kprobetcp"
path = "src/main.rs"
