[package]
name = "lsm-nice"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya" }
aya-log = { git = "https://github.com/aya-rs/aya" }
lsm-nice-common = { path = "../lsm-nice-common", features = ["user"] }
anyhow = "1"

log = "0.4"
tokio = { version = "1.25", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
env_logger = "0.11"

[[bin]]
name = "lsm-nice"
path = "src/main.rs"
