[package]
name = "myapp-ebpf"
version = "0.1.0"
edition = "2018"

[dependencies]
aya-bpf = { git = "http://github.com/alessandrod/aya", branch = "main" }
myapp-common = { path = "../myapp-common" }

[[bin]]
name = "myapp"
path = "src/main.rs"

[profile.dev]
panic = "abort"
overflow-checks = false

[profile.release]
panic = "abort"

[workspace]
members = []