[package]
name = "myapp-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-bpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
myapp-common = { path = "../myapp-common" }

[[bin]]
name = "myapp"
path = "src/main.rs"

[profile.release]
panic = "abort"

[workspace]
members = []
