[package]
name = "tc-byte-count"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
tc-byte-count-common = { path = "../tc-byte-count-common", features = ["user"] }
anyhow = "1.0"
clap = { version = "4.1", features = ["derive"] }
log = "0.4"
tokio = { version = "1.25", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "time"
] }
bytes = "1"
env_logger = "0.11"
lru = "0.12"
stats-cli = "3.0"


[[bin]]
name = "tc-byte-count"
path = "src/main.rs"
