[package]
name = "tc-egress-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = { git = "https://github.com/aya-rs/aya" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya" }
tc-egress-common = { path = "../tc-egress-common" }
memoffset = "0.9"
network-types = "0.0.7"

[build-dependencies]
which = { version = "6.0.0", default-features = false }

[[bin]]
name = "tc-egress"
path = "src/main.rs"
