[package]
name = "tc-egress"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = ">=0.11", features=["async_tokio"] }
aya-log = "0.1"
tc-egress-common = { path = "../tc-egress-common", features=["user"] }
anyhow = "1.0.68"
clap = { version = "3.2", features = ["derive"] }
log = "0.4"
tokio = { version = "1.23", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
bytes = "1"
env_logger = "0.10"

[[bin]]
name = "tc-egress"
path = "src/main.rs"
