[package]
name = "tracepoint-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
tracepoint-common = { path = "../tracepoint-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "tracepoint"
path = "src/main.rs"
