[package]
name = "xdp-drop-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = { git = "https://github.com/aya-rs/aya" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya" }
xdp-drop-common = { path = "../xdp-drop-common" }
network-types = "0.0.7"

[build-dependencies]
which = { version = "7.0.0", default-features = false }

[[bin]]
name = "xdp-drop"
path = "src/main.rs"
