[package]
name = "xdp-hello"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = ">=0.11", features = ["async_tokio"] }
aya-log = "0.1"
xdp-hello-common = { path = "../xdp-hello-common", features = ["user"] }
anyhow = "1.0.68"
clap = { version = "3.1", features = ["derive"] }
log = "0.4"
tokio = { version = "1.24", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
env_logger = "0.10"

[[bin]]
name = "xdp-hello"
path = "src/main.rs"
